--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-</head>
-<body>
-    
-</body>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-red-300">
+    <!-- blog page  -->
+    <section class="bg-slate-100 w-9/12 mx-auto mt-8">
+      <div class="p-5">
+        <p class="text-red-600 text-lg">
+          What is the difference between map, forEach, filter and find?
+        </p>
+        <p>
+          <span class="text-green-500 text-lg font-bold">Ans:</span> The first
+          difference between map() and forEach() is the returning value. The
+          forEach() method returns undefined and map() returns a new array with
+          the transformed elements.Map() method does not change the original
+          array.ForEach() method is not executed for empty elements. The
+          filter() method is used to filter all the elements.The find() method
+          is used to find all the descendant elements of the selected
+          element.The filter() method does not change the original array.The
+          find() does not change the original array. The filter() and find()
+          method does not execute the function for empty elements.
+        </p>
+        <br />
+
+        <!-- <p class="text-red-600 text-lg">
+            What is the difference between local storage , session storage and cookie?
+        </p>
+        <p>
+          <span class="text-green-500 text-lg font-bold">Ans:</span> Local
+          storage is the most recent mechanism. It allows for larger amounts of
+          data to be stored, but the data is not deleted when the browser is
+          closed. Local storage is useful for storing data that the user will
+          need to access later, such as offline data. Session storage is similar
+          to cookies, but the data is only stored for the current session. This
+          means that the data will be deleted when the user closes the browser.
+          Session storage is useful for storing data that is sensitive, such as
+          login credentials. Cookies are the oldest and most well-known
+          mechanism. They are simple to use and well supported by browsers.
+          However, they are limited to 4KB of data and are often used to store
+          data that is not sensitive, such as user preferences.
+        </p> -->
+      </div>
+    </section>
+  </body>
 </html>
