second question done

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
         </p>
         <br />
 
-        <!-- <p class="text-red-600 text-lg">
+        <p class="text-red-600 text-lg">
             What is the difference between local storage , session storage and cookie?
         </p>
         <p>
@@ -44,7 +44,8 @@
           mechanism. They are simple to use and well supported by browsers.
           However, they are limited to 4KB of data and are often used to store
           data that is not sensitive, such as user preferences.
-        </p> -->
+        </p>
+        
       </div>
     </section>
   </body>
