third question done

--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,10 @@
     <title>Blog</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-red-300">
+  <body class="bg-slate-500">
     <!-- blog page  -->
-    <section class="bg-slate-100 w-9/12 mx-auto mt-8">
-      <div class="p-5">
+    <section class="bg-slate-100 w-9/12 mx-auto mt-8 p-5">
+      <div class="p-5 shadow-xl">
         <p class="text-red-600 text-lg">
           What is the difference between map, forEach, filter and find?
         </p>
@@ -45,7 +45,27 @@
           However, they are limited to 4KB of data and are often used to store
           data that is not sensitive, such as user preferences.
         </p>
-        
+        <br>
+        <p class="text-red-600 text-lg">
+            What is Event loop and how it works?
+        </p>
+        <p>
+          <span class="text-green-500 text-lg font-bold">Ans:</span> Event loop is just a guardian who keeps a good communication with Call Stack and Callback Queue. It checks if the call stack is free, then lets know the callback queue. Then Callback queue passes the callback function to Call stack to be executed. When all the callback functions are executed, the call stack is out and global execution context is free.
+        </p>
+        <br>
+        <!-- <p class="text-red-600 text-lg">
+            What is Event loop and how it works?
+        </p>
+        <p>
+          <span class="text-green-500 text-lg font-bold">Ans:</span> Event loop is just a guardian who keeps a good communication with Call Stack and Callback Queue. It checks if the call stack is free, then lets know the callback queue. Then Callback queue passes the callback function to Call stack to be executed. When all the callback functions are executed, the call stack is out and global execution context is free.
+        </p>
+        <br>
+        <p class="text-red-600 text-lg">
+            What is Event loop and how it works?
+        </p>
+        <p>
+          <span class="text-green-500 text-lg font-bold">Ans:</span> Event loop is just a guardian who keeps a good communication with Call Stack and Callback Queue. It checks if the call stack is free, then lets know the callback queue. Then Callback queue passes the callback function to Call stack to be executed. When all the callback functions are executed, the call stack is out and global execution context is free.
+        </p> -->
       </div>
     </section>
   </body>
